force-app/main/default/objects/Trail__c/fields/TotalPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalPoints__c</fullName>
    <label>TotalPoints</label>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>