force-app/main/default/objects/Trail__c/fields/TotalTime__c.field-meta.xml
<CustomField>
    <fullName>TotalTime__c</fullName>
    <label>TotalTime</label>
    <summarizedField>Trail_Module__c.TimeTrailModule__c</summarizedField>
    <summaryForeignKey>Trail_Module__c.Trail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>