force-app/main/default/objects/Trail__c/fields/TrailModule__c.field-meta.xml
<CustomField>
    <fullName>TrailModule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TrailModule</label>
    <referenceTo>Trail_Module__c</referenceTo>
    <relationshipLabel>Trails</relationshipLabel>
    <relationshipName>Trails</relationshipName>
    <type>Lookup</type>
</CustomField>